<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/main_fragment">

    <fragment
        android:id="@+id/main_fragment"
        android:name="io.github.drumber.kitsune.ui.main.MainFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_main" >
...
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_main_fragment_to_mediaListFragment"
            app:destination="@id/media_list_fragment" />
        <action
            android:id="@+id/action_main_fragment_to_search_fragment"
            app:destination="@id/search_fragment" />
    </fragment>

    <fragment
        android:id="@+id/search_fragment"
        android:name="io.github.drumber.kitsune.ui.search.SearchFragment"
        android:label="@string/nav_search"
...
        <action
            android:id="@+id/action_search_fragment_to_facet_fragment"
            app:destination="@id/facet_fragment" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="io.github.drumber.kitsune.ui.profile.MyProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_fragment_to_details_fragment"
            app:destination="@id/details_fragment"
...
            app:argType="io.github.drumber.kitsune.data.presentation.model.media.MediaSelector" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/library_fragment"
        android:name="io.github.drumber.kitsune.ui.library.LibraryFragment"
        android:label="@string/nav_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_library_fragment_to_details_fragment"
            app:destination="@id/details_fragment"
...
