<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.SearchFragment"
    android:transitionGroup="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="1dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:outlineAmbientShadowColor="@android:color/transparent"
            app:liftOnScroll="false"
            app:elevation="0dp"
            android:background="@android:color/transparent"
            tools:targetApi="p">

            <LinearLayout
                android:id="@+id/search_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                android:background="@android:color/transparent">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp"
                    style="@style/Widget.Material3.CardView.Elevated">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_back"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_arrow_back_24"
                            app:tint="?attr/colorControlNormal"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_gravity="center"
                            android:contentDescription="@string/action_back" />

                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/search_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:defaultQueryHint="@string/hint_search"
                            app:searchIcon="@null"
                            style="@style/Widget.Kitsune.SearchView" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_filter"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_filter_24"
                            app:tint="?attr/colorControlNormal"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_gravity="center"
                            android:contentDescription="@string/title_filter" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle_search_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="6dp"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_search_media"
                        style="?attr/materialButtonTonalStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_type_media" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_search_users"
                        style="?attr/materialButtonTonalStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_type_users" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false"
            tools:listitem="@layout/item_media"/>

        <include
            android:id="@+id/layout_loading"
            layout="@layout/layout_resource_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"/>

        <include
            android:id="@+id/layout_search_provider_status"
            layout="@layout/layout_search_provider_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="gone"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>
