<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.AuthenticationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationContentDescription="@string/action_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/layout_login_form"
                android:contentDescription="@null" />

            <LinearLayout
                android:id="@+id/layout_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_login"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium"
                    android:textColor="?attr/colorSecondary"
                    android:layout_marginBottom="24dp" />

                <TextView
                    android:id="@+id/tv_additional_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    tools:text="Your access token has expired. Please log in again."
                    tools:visibility="visible"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_outline_info_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/field_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/prompt_email_or_username"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:selectAllOnFocus="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/prompt_password"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:enabled="false"
                    android:text="@string/action_sign_in" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:text="@string/login_no_account"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="16dp"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/translucent_background"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_logging_in"
            android:layout_gravity="center" />

        <com.google.android.material.loadingindicator.LoadingIndicator
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>