...
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:requiresFadingEdge="horizontal"
                    android:scrollbars="none">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        app:singleLine="true" />

                </HorizontalScrollView>
...
                        layout="@layout/section_details_info"
                        app:data="@{data}" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_media_units"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{data.isAnime() ? @string/title_episodes : @string/title_chapters}"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_characters"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_characters"
                    android:textAllCaps="false" />
...
